--- a/package.json
+++ b/package.json
@@ -2,21 +2,16 @@
   "name": "genlogic",
   "version": "1.0.0",
   "description": "GenLogic - Augmented Normalization for PostgreSQL with foreign keys as data pipelines",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "bin": {
-    "genlogic": "dist/cli.js"
+    "genlogic": "src/cli.ts"
   },
   "scripts": {
-    "build": "tsc",
-    "dev": "node --loader tsx/esm src/cli.ts",
-    "start": "node dist/cli.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:validation": "jest --testPathPattern=validation",
-    "test:database": "jest --testPathPattern=database",
-    "lint": "eslint src/**/*.ts",
-    "clean": "rm -rf dist"
+    "dev": "bun run src/cli.ts",
+    "start": "bun run src/cli.ts",
+    "test": "bun test",
+    "test:validation": "bun test tests/validation",
+    "test:database": "bun test tests/database"
   },
   "keywords": [
     "database",
@@ -30,23 +25,13 @@
   "dependencies": {
     "ajv": "^8.12.0",
     "commander": "^11.1.0",
-    "pg": "^8.11.3",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.5",
-    "@types/node": "^20.8.0",
-    "@types/pg": "^8.10.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "eslint": "^8.51.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.4.4",
-    "tsx": "^3.14.0",
-    "typescript": "^5.2.2"
+    "@types/node": "^20.8.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "bun": ">=1.2.0"
   },
   "type": "module"
 }
